--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     rel="stylesheet">
 
   <!-- this is just kind of footer style  -->
-  <style>
+<!--   <style>
     .attribution {
       font-size: 11px;
       text-align: center;
       margin-top: -100px;
-    }
+    } -->
 
     .attribution a {
       color: hsl(228, 45%, 44%);
@@ -71,10 +71,10 @@
 </div>
 
 
-  <div class="attribution">
+<!--   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Ashwini Magar</a>.
-  </div>
+  </div> -->
 </body>
 
 </html>
