--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       font-size: 11px;
       text-align: center;
       margin-top: -100px;
-    } -->
+    }
 
     .attribution a {
       color: hsl(228, 45%, 44%);
     }
-  </style>
+  </style>  -->
 </head>
 
 <body>
